# MacOS-Linux

./: .gitignore  CLAUDE.md  CREDITS.md  README.md  bootstrap.sh  handoff.md  install.sh  soul.md
02-glass-effect/: CMakeLists.txt  README.md
02-glass-effect/src/: CMakeLists.txt  liquidglass.cpp  liquidglass.h  liquidglass.qrc  main.cpp  metadata.json
02-glass-effect/src/shaders/: downsample.frag  downsample_core.frag  liquid_glass.frag  liquid_glass_core.frag  roundedcorners.glsl  vertex.vert  vertex_core.vert
03-theme/: README.md  SVG-RADII-NOTES.md  apply-kvantum-overrides.sh  install-base.sh  install-icons.sh  install-rounded-corners.sh
03-theme/aurorae/: Tahoe-Dark-rc  Tahoe-Light-rc  apply-aurorae.sh
03-theme/color-schemes/: TahoeDark.colors  TahoeLight-Contrast.colors  TahoeLight.colors  install-colors.sh
03-theme/kvantum/: MacTahoe.kvconfig.override  MacTahoeDark.kvconfig.override
04-configs/: 00-apply-lookandfeel.sh  10-global-menu.sh  20-dock-panel.sh  25-panel-defloat.sh  30-fonts.sh  40-wallpaper.sh  45-dynamic-wallpaper.sh  50-auto-light-dark.sh  60-a11y.sh  README.md
04-configs/files/: 50-appmenu-gtk.conf  fontconfig-sf-pro.conf  tahoe-theme-rearm  tahoe-theme-switch  tahoe-theme-switch.service  tahoe-theme-switch.timer  tahoe-trash.desktop  tahoe-wallpaper-phase  tahoe-wallpaper-phase.service  tahoe-wallpaper-phase.timer  tahoe-wallpaper-rearm
corpus/: INDEX.md  MANIFEST.txt
corpus/analysis/: accent-palette.json  accent_diff.py  batch_mine.py  dark_measure.py  measure.py  measure_chrome.py  measure_controls.py  measure_surfaces.py  mining-results.json  tahoe-tokens.json
corpus/apple-hig/: APPLE_GENIUS.md
corpus/apple-hig/liquid-glass/: ELEMENT_KIT.md  README.md
corpus/artifacts/: liquid-glass-lab.html  liquid-glass-rulebook.html  materials.html  tahoe-calibration-sheet.html  tahoe-calibration.html  tahoe-package-plan.html  tahoe-strategy.html  tahoe.html
lib/: plasma-tools.sh
parity/: BACKLOG.md  figma-extract.md
tokens/: tahoe.json
